kubernetes/mpesa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-mpesa
  labels:
    app.kubernetes.io/name: simple-mpesa
spec:
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app.kubernetes.io/name: simple-mpesa
  template:
    metadata:
      labels:
        app.kubernetes.io/name: simple-mpesa
    spec:
      containers:
        - name: simple-mpesa
          image: openg2p/simple-mpesa:v0.1-alpha  # Replace with your Docker image URL
          ports:
            - containerPort: 6700  # The port your app listens on
          volumeMounts:
            - name: config-yaml
              mountPath: /go/app/config.yml
              subPath: config.yml
      volumes:
        - name: config-yaml
          configMap:
            name: simple-mpesa
