kubernetes/mpesa/simple-mpesa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-mpesa
  labels:
    app.kubernetes.io/name: simple-mpesa
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: simple-mpesa
  template:
    metadata:
      labels:
        app.kubernetes.io/name: simple-mpesa
    spec:
      containers:
      - name: mpesa
        image: lalithkota/simple-mpesa:v0.1-alpha
        ports:
        - containerPort: 6700
        volumeMounts:
        - name: config-yml
          mountPath: /go/app/config.yml
          subPath: config.yml
      volumes:
      - name: config-yml
        configMap:
          name: simple-mpesa
---
apiVersion: v1
kind: Service
metadata:
  name: simple-mpesa
  labels:
    app.kubernetes.io/name: simple-mpesa
spec:
  selector:
    app.kubernetes.io/name: simple-mpesa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6700
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: simple-mpesa
  labels:
    app.kubernetes.io/name: simple-mpesa
spec:
  gateways:
  - istio-system/all-hosts
  hosts:
  - mpesa.openg2p.sandbox.net
  http:
  - route:
    - destination:
        host: simple-mpesa
        port:
          number: 80
