kubernetes/mpesa/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: simple-mpesa
  labels:
    app.kubernetes.io/name: simple-mpesa
spec:
  gateways:
    - istio-system/all-hosts
  hosts:
    - mpesa.openg2p.sandbox.net
  http:
    - route:
        - destination:
            host: simple-mpesa
            port:
              number: 80
